sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var value : Int;
    ^AlgInsertionSort:10: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var indiceInserer : Int;
    ^